<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_principal" tools:context=".PrincipalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tipoPtmo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Gallery

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/galleryTipoPtmo"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Producto Seleccionado :"
        android:id="@+id/txtProducto"
        android:layout_marginStart="68dp"
        android:layout_below="@+id/galleryTipoPtmo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quincenal"
            android:id="@+id/rbQuincenal"
            android:textColor="@color/colorGris"
            android:layout_centerHorizontal="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mensual"
            android:id="@+id/rbMensual"
            android:textColor="@color/colorGris"
            android:layout_centerHorizontal="true" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/FrecPago"
        android:id="@+id/textView2"
        android:layout_below="@+id/txtProducto"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/monto"
            android:id="@+id/textView3"
            android:layout_above="@+id/radioGroup"
            android:layout_alignParentStart="true" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/plazo"
            android:id="@+id/textView4"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generar"
            android:id="@+id/btnAceptar"
            android:background="@color/colorVerde1"
            android:textColor="@color/colorBlanco" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/linearLayout"
            android:layout_alignEnd="@+id/txtProducto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tasa"
            android:id="@+id/textView5"
            android:layout_below="@+id/linearLayout"
            android:layout_alignEnd="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView5"
            android:layout_alignRight="@+id/textView" />

    </LinearLayout>



</RelativeLayout>
